# psyche

./: .gitignore  pyproject.toml
psyche/: attention.py  board.py  config.py  emotional_state.py  evaluate.py  llm.py  main.py  metrics.py  personality.py  prediction.py  shared_prompts.py  ui.py
psyche/agents/: ast_agent.py  base.py  critic.py  drive.py  emotion.py  hot.py  integration.py  memory.py  orchestrator.py  perception.py  reasoning.py  self_model.py  social.py
psyche/architectures/: base.py  combined.py  freudian.py  gwt.py  hot.py  plain.py  plain_multi.py
