[project]
name = "psyche"
version = "0.1.0"
description = "A multi-agent consciousness simulator based on Global Workspace Theory"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "textual>=0.50",
    "anthropic>=0.40",
]

[tool.setuptools.packages.find]
include = ["psyche*"]

[project.scripts]
psyche = "psyche.main:main"
psyche-eval = "psyche.evaluate:main"
